# plover_emoji

./: .gitmodules  MANIFEST.in  README.rst  plover_emoji.py  requirements.txt  setup.cfg  test_plover_emoji.py
plover_emoji/: __init__.py
test/: test_plover_emoji.py
