[metadata]
name = plover_emoji
version = 0.0.3
description = Convert text to emoji with a stroke.
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/morinted/plover_emoji
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
    simplefuzzyset>=0.0.12
packages =
    plover_emoji

[options.entry_points]
plover.meta =
    emoji = plover_emoji:emoji

[tool:pytest]
python_files = test/test_*.py
